<resources>
    <string name="app_name">My TA</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="text_login">登录帐号</string>
    <string name="action_login">登录</string>
    <string name="action_forget">忘记密码</string>
    <string name="action_sign_in">注册新用户</string>
    <string name="error_invalid_email">请输入正确的邮箱</string>
    <string name="error_invalid_password">密码格式不正确</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填</string>

    <!-- Strings related to register -->
    <string name="text_register">新用户注册</string>
    <string name="text_valid_username">请输入您的用户名</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_confirm_password">再次输入密码</string>
    <string name="prompt_name">姓名</string>
    <string name="prompt_campus_id">学号</string>
    <string name="prompt_phone">手机号码</string>
    <string name="action_register">注册</string>
    <string name="action_clear">清除</string>
    <string name="radio_student">学生</string>
    <string name="radio_teacher">老师/TA</string>
    <string name="text_valid_email">请输入您的常用邮箱</string>
    <string name="text_valid_password">密码至少为8位，必须是字母和数字的组合</string>
    <string name="text_register_type">你是</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- String related to main page -->
    <string name="homework">作业</string>
    <string name="course">课程</string>
    <string name="user_info">我</string>
    <string name="title_activity_course_info">CourseInfo</string>

</resources>
