<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="four.awesome.myta.RegisterActivity">

    <TextView
        android:id="@+id/text_register"
        android:text="@string/text_register"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_register_valid_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/text_register_valid_username"
        android:text="@string/text_valid_username"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_register"
        app:layout_constraintBottom_toTopOf="@+id/edit_register_username"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edit_register_username"
        android:hint="@string/prompt_username"
        android:background="@drawable/edit_login"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/text_register_valid_username"
        app:layout_constraintBottom_toTopOf="@+id/text_register_valid_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/text_register_valid_email"
        android:text="@string/text_valid_email"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_register_username"
        app:layout_constraintBottom_toTopOf="@+id/edit_register_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edit_register_email"
        android:hint="@string/prompt_email"
        android:background="@drawable/edit_login"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/text_register_valid_email"
        app:layout_constraintBottom_toTopOf="@+id/text_register_valid_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/text_register_valid_password"
        android:text="@string/text_valid_password"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_register_email"
        app:layout_constraintBottom_toTopOf="@+id/edit_register_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="10dp"/>


    <EditText
        android:id="@+id/edit_register_password"
        android:hint="@string/prompt_password"
        android:background="@drawable/edit_login"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/text_register_valid_password"
        app:layout_constraintBottom_toTopOf="@+id/edit_register_confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp"/>


    <EditText
        android:id="@+id/edit_register_confirm_password"
        android:hint="@string/prompt_confirm_password"
        android:inputType="textPassword"
        android:background="@drawable/edit_login"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_register_password"
        app:layout_constraintBottom_toTopOf="@+id/text_register_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/text_register_type"
        android:text="@string/text_register_type"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_register_confirm_password"
        app:layout_constraintBottom_toTopOf="@+id/radio_group_register_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="10dp" />

    <RadioGroup
        android:id="@+id/radio_group_register_type"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_register_type"
        app:layout_constraintBottom_toTopOf="@+id/button_register_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <RadioButton
            android:id="@+id/radio_register_student"
            android:buttonTint="@android:color/white"
            android:hint="@string/radio_student"
            android:textColorHint="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radio_register_teacher"
            android:buttonTint="@android:color/white"
            android:hint="@string/radio_teacher"
            android:textColorHint="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <Button
        android:id="@+id/button_register_submit"
        android:background="@drawable/button"
        android:text="@string/action_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_register_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp" />

</android.support.constraint.ConstraintLayout>
