<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="four.awesome.myta.LoginActivity" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_login_avatar"
        android:src="@android:color/white"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/text_login"
        android:text="@string/text_login"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_login_avatar"
        app:layout_constraintBottom_toTopOf="@id/edit_login_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/edit_login_email"
        android:hint="@string/prompt_email"
        android:background="@drawable/edit_login"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        android:layout_width="250dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@id/text_login"
        app:layout_constraintBottom_toTopOf="@id/edit_login_psw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/edit_login_psw"
        android:hint="@string/prompt_password"
        android:background="@drawable/edit_login"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        android:backgroundTint="@android:color/white"
        android:layout_width="250dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@id/edit_login_email"
        app:layout_constraintBottom_toTopOf="@id/button_login_forget"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button_login_forget"
        android:text="@string/action_forget"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/button_login_forget"
        app:layout_constraintBottom_toTopOf="@id/button_login_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_login_submit"
        android:background="@drawable/button"
        android:text="@string/action_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/button_login_forget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="100dp"/>

    <Button
        android:id="@+id/button_login_register"
        android:background="@android:color/transparent"
        android:text="@string/action_sign_in"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
